添加head规范和窗口固定按钮

--- a/contents/css/layout.css
+++ b/contents/css/layout.css
@@ -2,3 +2,8 @@
 
 /* 选择时间的样式 */
 @import url('parts/reset.css');
+
+/* 引用窗口固定按钮基础样式 */
+@import url('../../parts/fixedWinBtn/contents/css/layout.css');
+/* 添加自定义样式 */
+@import url('parts/fixedWinBtn.css')
